# opengl-template

./: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: main.cpp
